--- a/src/components/Signup/Signup.module.css
+++ b/src/components/Signup/Signup.module.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
 }
 h1,
@@ -85,4 +85,4 @@ input[type="file"] {
 
 .mainFormContainer .link {
   text-decoration: none;
-}
+} */
